syntax = "proto3";

package common.v1;

option java_package = "commonv1";
option java_multiple_files = true;
option java_outer_classname = "CommonProto";
option go_package = "github.com/traffic-tacos/proto-contracts/gen/go/common/v1;commonv1";

// Common error codes used across all services
enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_INVALID_REQUEST = 1;
  ERROR_CODE_EVENT_NOT_FOUND = 2;
  ERROR_CODE_SEATS_UNAVAILABLE = 3;
  ERROR_CODE_HOLD_EXPIRED = 4;
  ERROR_CODE_RESERVATION_NOT_FOUND = 5;
  ERROR_CODE_PAYMENT_REQUIRED = 6;
  ERROR_CODE_INTERNAL_ERROR = 7;
}

// Common error detail
message ErrorDetail {
  string field = 1;
  string message = 2;
}

// Common error response
message Error {
  ErrorCode code = 1;
  string message = 2;
  string trace_id = 3;
  repeated ErrorDetail details = 4;
}

// Common money representation
message Money {
  int64 amount = 1;    // Amount in smallest currency unit (e.g., cents)
  string currency = 2; // Currency code (e.g., "USD", "KRW")
}

// Common seat representation
message Seat {
  string seat_id = 1;
  string section = 2;
  Money price = 3;
}